--- a/Artimiti64.csproj
+++ b/Artimiti64.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Artimiti64Core\Artimiti64Core.csproj" />
+    <Reference Include="Artimiti64Core">
+      <HintPath>Artimiti64Core.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
